# manas-v1-archive

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
manas-agent/: Cargo.toml
manas-agent/src/: freshness.rs  lib.rs  pipeline.rs  scraper.rs  searcher.rs
manas-benches/: Cargo.toml
manas-benches/benches/: bench.rs
manas-cli/: Cargo.toml
manas-cli/src/: main.rs
manas-core/: Cargo.toml
manas-core/src/: activation.rs  error.rs  layer.rs  lib.rs  network.rs  neuron.rs
manas-ingest/: Cargo.toml
manas-ingest/src/: file_reader.rs  folder_walker.rs  lib.rs  normalizer.rs  raw_text.rs
manas-ingest/src/format/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs  plaintext.rs  rust_source.rs  toml.rs
manas-language/: Cargo.toml
manas-language/src/: attention.rs  lib.rs
manas-learn/: Cargo.toml
manas-learn/src/: backprop.rs  decoder.rs  embedder.rs  lib.rs  tokenizer.rs  trainer.rs
manas-memory/: Cargo.toml
manas-memory/src/: compressor.rs  lib.rs  protector.rs  scorer.rs
manas-store/: Cargo.toml
manas-store/src/: format.rs  integrity.rs  lib.rs  reader.rs  writer.rs
teach/: basics.md  identity.md  math.md  rules.md
