[package]
name = "manas-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Manas agent — web search, HTML scraping, freshness checker"

[dependencies]
manas-core = { workspace = true }
manas-ingest = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
scraper = "0.27"
