[package]
name = "manas-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Manas benchmarks — performance benchmarks for all crates"
publish = false

[dependencies]
manas-core = { workspace = true }
manas-learn = { workspace = true }
manas-store = { workspace = true }
manas-ingest = { workspace = true }
manas-memory = { workspace = true }

[[bench]]
name = "bench"
harness = false
