[package]
name = "manas-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Manas ingest — unified input pipeline for text, files, folders, URLs"

[dependencies]
manas-core = { workspace = true }
manas-learn = { workspace = true }
serde_json = "1"
toml = "0.8"
csv = "1"
walkdir = "2"
