[package]
name = "manas-learn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Manas learn — tokenizer, embedder, backpropagation, online learning, decoder"

[dependencies]
manas-core = { workspace = true }
manas-memory = { workspace = true }
manas-store = { workspace = true }
rand = "0.8"
