[package]
name = "manas-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Manas memory — importance scoring, protection, compression"

[dependencies]
manas-core = { workspace = true }
