[package]
name = "manas-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Manas store — .manas binary format, append-only I/O, CRC32 integrity"

[dependencies]
manas-core = { workspace = true }
crc32fast = "1.4"
